; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_unicode_common.c_cycle_unicode_input_mode.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_unicode_common.c_cycle_unicode_input_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@selected_index = common dso_local global i64 0, align 8
@selected_count = common dso_local global i64 0, align 8
@selected = common dso_local global i32* null, align 8
@unicode_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [33 x i8] c"Unicode input mode cycle to: %u\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cycle_unicode_input_mode(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* @selected_index, align 8
  %4 = load i64, i64* %2, align 8
  %5 = add i64 %3, %4
  %6 = load i64, i64* @selected_count, align 8
  %7 = urem i64 %5, %6
  store i64 %7, i64* @selected_index, align 8
  %8 = load i32*, i32** @selected, align 8
  %9 = load i64, i64* @selected_index, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @unicode_config, i32 0, i32 0), align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @unicode_config, i32 0, i32 0), align 4
  %13 = call i32 @dprintf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %12)
  ret void
}

declare dso_local i32 @dprintf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
